--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,6 @@
 .lead {
   min-width: 984px;
-  height: 1005px;
+  min-height: 1005px;
   display: flex;
   flex-direction: column;
   align-items: center;
