--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   position: relative;
-  min-width: 1280px;
+  width: 1280px;
   height: 6875px;
   background-color: #2A2C2F;
   -moz-osx-font-smoothing: grayscale;
