--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   position: relative;
-  width: 1280px;
-  height: 6875px;
+  min-width: 320px;
+  max-width: 1280px;
   background-color: #2A2C2F;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
