--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,25 @@
 .lead__image {
   width: 100%;
-  min-width: 984px;
-  height: 615px;
-  margin-top: 64px;
+  object-fit: cover;
+  margin: 0;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .lead__image {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 321px) {
+  .lead {
+    width: 100%;
+    margin: calc(48px / 2) 0 calc(88px / 2);
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead {
+    margin: calc(48px / 2) 0 calc(64px / 2);
+    width: 100%;
+  }
 }
