--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,3 +3,9 @@
   grid-area: place__website;
   align-self: end;
 }
+
+@media screen and (max-width: 320px) {
+  .place__website {
+    margin: 32px 16px;
+  }
+}
