--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
   background-image: url(../../images/cover-trains.jpg);
-  max-width: 1184px;
+  width: calc(100% - 48px * 2);
   min-height: 740px;
   position: relative;
   background-size: cover;
@@ -9,4 +9,24 @@
   margin: 0 auto;
   display: flex;
   justify-content: center;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .cover {
+    width: 100%;
+    
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 321px) {
+  .cover {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    width: 100%;
+  }
 }
