--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,5 @@
 .header__lang-link {
-  position: absolute;
-  top: 46px;
-  right: 95px;
+  display: inline-block;
   width: 30px;
   height: 28px;
   margin: 0;
@@ -11,15 +9,12 @@
   font-size: 24px;
   line-height: 28px;
   color: #ffffff;
+  text-align: right;
+  margin-right: 18px;
 }
 
-
-
 .header__lang-link:last-of-type {
-  position: absolute;
-  top: 46px;
-  right: 48px;
-  margin: 0;
+  margin-right: 0;
 }
 
 .header__lang-link:active {
