--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,13 @@
 .header__logo {
-  width: 176px;
+  max-width: 176px;
+  width: 100%;
   height: 52px;
-  left: 48px;
-  top: 28px;
+}
+
+@media screen and (max-width: 320px) {
+  .header__logo {
+    width: 100%;
+    max-width: 142px;
+    height: 42px;
+  }
 }
