--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,21 @@
 .header {
-  min-width: 1184px;
-  height: 52px;
-  padding: 28px 0 0;
-  margin: 0 48px;
+  width: calc(100% - 48px * 2);
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: auto;
+  padding: 28px 0;
+}
+
+@media screen and (max-width: 768px) and (min-width: 321px) {
+  .header {
+    width: calc(100% - 24px * 2);
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    width: calc(100% - 16px * 2);
+    padding-top: 16px;
+  }
 }
