--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,6 @@
 .intro__title {
-  width: 690px;
-  height: 58px;
+  max-width: 690px;
+  width: 100%;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 900;
@@ -8,4 +8,11 @@
   line-height: 58px;
   color: #FFFFFF;
   margin: 0 0 40px;
+}
+
+@media screen and (max-width: 320px) {
+  .intro__title {
+    font-size: 32px;
+  line-height: 35px;
+  }
 }
