--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,8 +1,24 @@
 .lead {
-  min-width: 984px;
-  min-height: 1005px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 148px;
+  max-width: 984px;
+  width: 100%;
+  margin: auto;
+  padding: calc(56px / 2) 0 0;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .lead {
+    width: calc(100% - 48px * 2);
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 321px) {
+  .lead {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead {
+    width: 100%;
+  }
 }
