--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,8 @@
   position: relative;
   min-width: 320px;
   max-width: 1280px;
-  background-color: #2A2C2F;
+  width: 100%;
+  margin: auto;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 
