--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,4 +1,23 @@
 .photo-grid__item {
-  width: 284px;
-  height: 213px;
+  display: block;
+  width: 100%;
+  min-height: 213px;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .photo-grid__item {
+    min-height: 225px;
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 321px) {
+  .photo-grid__item {
+    min-height: 264px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid__item {
+    min-height: 216px;
+  }
 }
