--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,3 +2,21 @@
   grid-area: place__image;
   width: 460px;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .place__image {
+      width: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 321px) {
+  .place__image {
+      max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__image {
+      max-width: 320px;
+  }
+}
