--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,4 +9,17 @@
   margin: 0 0 26px;
 }
 
+@media screen and (max-width: 768px) and (min-width: 321px) {
+  .place__paragraph {
+      font-size: 16px;
+      margin-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+      font-size: 16px;
+      margin: 0 16px 25px;
+  }
+}
 
