--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -9,3 +9,28 @@
   color: #ffffff;
   margin: 0;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .place__title {
+      font-size: 42px;
+      line-height: 76px;
+      max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 321px) {
+  .place__title {
+      font-size: 42px;
+      line-height: 46px;
+      max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__title {
+      font-size: 32px;
+      line-height: 35px;
+      max-width: 288px;
+      margin: 0 16px;
+  }
+}
