--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,30 @@
 .places {
 max-width: 984px;
+width: 100%;
 display: flex;
 flex-direction: column;
 gap: 80px;
 margin: 92px auto;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .places {
+    margin-right: 48px;
+    margin-left: 48px;
+  }
+
+}
+
+@media screen and (max-width: 768px) and (min-width: 321px) {
+  .places {
+    margin: 88px 24px 90px;
+    gap: 73px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places {
+    margin: 64px 0 66px;
+    gap: 50px;
+  }
 }
