--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,7 +1,8 @@
 .photo-grid__item {
   display: block;
-  width: 100%;
-  min-height: 213px;
+  max-width: 100%;
+  height: 213px;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1024px) and (min-width: 769px) {
