--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,20 +2,23 @@
   width: calc(100% - 48px * 2);
   display: flex;
   justify-content: space-between;
-  padding: 92px 48px 24px;
+  padding: 92px 0 24px;
+  margin: auto;
 }
 
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .footer {
     width: calc(100% - 24px * 2);
+    padding: 88px 0 24px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .footer {
     width: calc(100% - 16px * 2);
     flex-direction: column;
     row-gap: 48px;
+    padding: 64px 0 24px;
   }
 }
