--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,5 @@
 .place__url-heading {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -7,4 +7,5 @@
   letter-spacing: 2px;
   color: #aaaaaa;
   margin: 0 0 12px;
+  width: 100%;
 }
