--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,4 +1,12 @@
 .cover__link {
+  background-image: url(../../../images/cover-trains.jpg);
+  min-height: 740px;
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: center;
   width: 100%;
   text-decoration: none;
   display: flex;
@@ -12,6 +20,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   background: #2a2c2f;
@@ -23,3 +33,20 @@
   opacity: 0.8;
 }
 
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .cover__link {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .cover__link {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__link {
+    min-height: 200px;
+  }
+}
