--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,32 +1,11 @@
 .cover {
-  background-image: url(../../images/cover-trains.jpg);
   width: calc(100% - 48px * 2);
-  min-height: 740px;
-  position: relative;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  object-fit: cover;
+  margin: auto;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 769px) {
-  .cover {
-    width: 100%;
-    
-  }
-}
-
-@media screen and (max-width: 768px) and (min-width: 321px) {
+@media screen and (max-width: 1279px) {
   .cover {
     width: 100%;
   }
 }
 
-@media screen and (max-width: 320px) {
-  .cover {
-    width: 100%;
-  }
-}
