--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -7,5 +7,11 @@
   text-align: right;
   color: #FFFFFF;
   margin: 0;
-  min-width: 186px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    line-height: 14px;
+    text-align: left;
+  }
 }
