--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -21,3 +21,10 @@
   text-decoration: underline;
   cursor: pointer;
 }
+
+@media screen and (max-width: 767px) {
+  .header__logo {
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
