--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,16 +4,16 @@
   justify-content: space-between;
   align-items: flex-end;
   margin: auto;
-  padding: 28px 0;
+  padding: 28px 0 0;
 }
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .header {
     width: calc(100% - 24px * 2);
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .header {
     width: calc(100% - 16px * 2);
     padding-top: 16px;
