--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,6 @@
 .lead__subtitle {
   max-width: 640px;
   width: 100%;
-  height: 72px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -12,14 +11,17 @@
   margin: 32px auto 64px;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 769px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .lead__subtitle {
     margin: 32px auto 56px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .lead__subtitle {
+    width: calc(100% - 16px * 2);
     margin: 16px auto 40px;
+    font-size: 16px;
+    line-height: 20px;
   }
 }
