--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,23 +1,23 @@
 .photo-grid__item {
   display: block;
   max-width: 100%;
-  height: 213px;
+  min-height: 213px;
   object-fit: cover;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 769px) {
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
   .photo-grid__item {
     min-height: 225px;
   }
 }
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .photo-grid__item {
     min-height: 264px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .photo-grid__item {
     min-height: 216px;
   }
