--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -1,32 +1,32 @@
 .photo-grid__list {
   display: grid;
-  grid-template-columns: repeat(4, minmax(284px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
-  gap: 16px;
+  grid-template-columns: repeat(4, minmax(284px, auto));
+  grid-template-rows: repeat(auto-fit, minmax(213px, auto));
+  grid-gap: 16px;
   justify-content: center;
   margin: 0;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 769px) {
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
   .photo-grid__list {
     grid-template-columns: repeat(3, minmax(300px, auto));
     grid-template-rows: repeat(auto-fit, minmax(225px, auto));
-    gap: 14px;
+    grid-gap: 14px;
   }
 }
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .photo-grid__list {
     grid-template-columns: repeat(2, minmax(352px, auto));
     grid-template-rows: repeat(auto-fit, minmax(264px, auto));
-    gap: 16px;
+    grid-gap: 16px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .photo-grid__list {
     grid-template-columns: repeat(1, minmax(288px, auto));
     grid-template-rows: repeat(auto-fit, minmax(216px, auto));
-    gap: 12px;
+    grid-gap: 12px;
   }
 }
