--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,22 @@
 .photo-grid {
   margin: auto;
-  max-width: 92.5%;
+  width: calc(100% - 48px * 2);
 }
 
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .photo-grid {
+    width: calc(100% - 48px * 2);
+  }
+}
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .photo-grid {
+    width: calc(100% - 24px * 2);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    width: calc(100% - 16px * 2);
+  }
+}
