--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,22 +1,22 @@
 .place__image {
-  grid-area: place__image;
-  width: 460px;
+  min-height: 460px;
+  width: 100%;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 769px) {
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
   .place__image {
-      width: 440px;
+    min-height: 440px;
   }
 }
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .place__image {
-      max-width: 340px;
+    min-height: 340px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px){
   .place__image {
-      max-width: 320px;
+    min-height: 320px;
   }
 }
