--- a/blocks/place/__item/place__item.css
+++ b/blocks/place/__item/place__item.css
@@ -1,32 +1,25 @@
 .place__item {
-  display: grid;
-  grid-row-gap: 48px;
-  grid-column-gap: 40px;
-  grid-template-areas: "place__title place__website"
-  "place__image place__text";
-  margin: 0;
   width: 100%;
+  display: grid;
+  grid-template-columns: fit-content(460px) fit-content(484px);
+  grid-column-gap: 40px;
+  row-gap: 48px;
+  justify-content: center;
+  margin-bottom: 80px;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 769px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .place__item {
-      grid-column-gap: 32px;
+    grid-template-columns: minmax(340px, auto) minmax(352px, auto);
+    grid-column-gap: 28px;
+    margin-bottom: 73px;
   }
 }
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
+@media screen and (max-width: 767px){
   .place__item {
-      grid-column-gap: 28px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .place__item {
-      grid-row-gap: 32px;
-      grid-template-areas:
-      "place__title"
-      "place__website"
-      "place__image"
-      "place__text";
+    grid-template-columns: minmax(288px, auto);
+    row-gap: 32px;
+    margin-bottom: 50px;
   }
 }
