--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,25 +1,23 @@
 .place__paragraph {
   max-width: 484px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 29px;
   color: #FFFFFF;
   margin: 0 0 26px;
+  width: 100%;
 }
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
+.place__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 1023px) {
   .place__paragraph {
       font-size: 16px;
       margin-bottom: 25px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .place__paragraph {
-      font-size: 16px;
-      margin: 0 16px 25px;
   }
 }
 
