--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,6 @@
 .place__title {
-  grid-area: place__title;
   max-width: 460px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
@@ -10,27 +9,18 @@
   margin: 0;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 769px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .place__title {
-      font-size: 42px;
-      line-height: 76px;
-      max-width: 440px;
+    font-size: 42px;
+    line-height: 46px;
   }
 }
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
+@media screen and (max-width: 767px) {
   .place__title {
-      font-size: 42px;
-      line-height: 46px;
-      max-width: 340px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .place__title {
-      font-size: 32px;
-      line-height: 35px;
-      max-width: 288px;
-      margin: 0 16px;
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 16px;
+    width: calc(100% - 16px * 2);
   }
 }
