--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,19 @@
 .place {
-  padding: 0;
+  max-width: 984px;
   width: 100%;
-  margin: 0 auto;
-}
+  margin: 92px auto;
+  }
+
+  @media screen and (max-width: 1023px) and (min-width: 768px) {
+    .place {
+      width: calc(100% - 24px * 2);
+      margin: 88px auto 90px;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    .place {
+      width: calc(100% - 16px * 2);
+      margin: 64px auto 66px;
+    }
+  }
