--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -15,6 +15,7 @@
   .cover__title {
     font-size: 32px;
     line-height: 35px;
-    margin: 0 16px 16px;
+    margin: 0 0 16px;
+    max-width: 250px;
   }
 }
