--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,6 @@
 .header__lang-link {
-  display: inline-block;
   width: 30px;
-  height: 28px;
-  margin: 0;
+  margin: 0 18px 0 0;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -10,20 +8,21 @@
   line-height: 28px;
   color: #ffffff;
   text-align: right;
-  margin-right: 18px;
+  text-decoration: none;
+  transition: opacity 0.1s linear 0s;
+  opacity: 1;
+}
+
+.header__lang-link:hover {
+opacity: 0.8;
 }
 
 .header__lang-link:last-of-type {
   margin-right: 0;
 }
 
-.header__lang-link:active {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
 @media screen and (max-width: 767px) {
-  .header__logo {
+  .header__lang-link {
     font-size: 18px;
     line-height: 20px;
   }
