--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,5 @@
 .lead__caption {
   min-width: 158px;
-  height: 14px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -12,4 +11,16 @@
   margin: 8px 0 0;
   display: flex;
   align-self: flex-start;
+}
+
+@media screen and (max-width: 1023px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
 }
