--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,10 +2,6 @@
   width: 100%;
   object-fit: cover;
   margin: 0;
-}
-
-@media screen and (max-width: 1023px) {
-  .lead__image {
-    width: 100%;
-  }
+  max-width: 984px;
+  max-height: 615px;
 }
