--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,4 @@
 .lead__title {
-  width: 100%;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 900;
@@ -7,12 +6,15 @@
   line-height: 100px;
   text-align: center;
   color: #ffffff;
-  margin: 0;
+  margin: 0 auto;
+  align-self: center;
+  max-width: 720px;
+  width: 100%;
 }
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   .lead__title {
-    margin: 0 24px;
+    margin: 0 auto;
     width: calc(100% - 24px * 2);
   }
 }
@@ -21,7 +23,7 @@
   .lead__title {
     font-size: 40px;
     line-height: 44px;
-    margin: 0 16px;
+    margin: 0 auto;
     width: calc(100% - 16px * 2);
   }
 }
