--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,14 +5,8 @@
 
 }
 
-@media screen and (max-width: 1023px) and (min-width: 768px) {
+@media screen and (max-width: 1100px) {
   .lead {
-    width: calc(100% - 48px * 2);
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .lead {
-    width: 100%;
+    max-width: 928px;
   }
 }
