--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -17,7 +17,14 @@
 @media screen and (max-width: 1023px) {
   .place__paragraph {
       font-size: 16px;
+      line-height: 26px;
       margin-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .place__paragraph {
+    margin: auto;
   }
 }
 
