--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,14 +6,12 @@
 
   @media screen and (max-width: 1023px) and (min-width: 768px) {
     .place {
-      width: calc(100% - 24px * 2);
-      margin: 88px auto 90px;
+      margin: 88px 0 90px;
     }
   }
 
   @media screen and (max-width: 767px) {
     .place {
-      width: calc(100% - 16px * 2);
-      margin: 64px auto 66px;
+      margin: 64px 0 66px;
     }
   }
