--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,14 +4,26 @@
   margin: 92px auto;
   }
 
-  @media screen and (max-width: 1023px) and (min-width: 768px) {
+  @media screen and (max-width: 1279px) {
     .place {
-      margin: 88px 0 90px;
+      margin: 92px auto;
+    }
+}
+
+  @media screen and (max-width: 1023px) {
+    .place {
+      width: calc(100% - 24px * 2);
+      margin: 88px auto 90px;
     }
   }
 
   @media screen and (max-width: 767px) {
     .place {
       margin: 64px 0 66px;
+      width: calc(100% - 16px * 2);
+      width: 100%;
     }
   }
+
+
+
