--- a/blocks/place/__item/place__item.css
+++ b/blocks/place/__item/place__item.css
@@ -1,7 +1,7 @@
 .place__item {
   width: 100%;
   display: grid;
-  grid-template-columns: fit-content(460px) fit-content(484px);
+  grid-template-columns: repeat(auto-fit, minmax(320px, max-content));
   grid-column-gap: 40px;
   row-gap: 48px;
   justify-content: center;
