--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,5 @@
 .header__lang-link {
-  width: 30px;
+  max-width: 30px;
   margin: 0 18px 0 0;
   font-family: 'Inter', sans-serif;
   font-style: normal;
