--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,21 +1,23 @@
 .header {
-  width: calc(100% - 48px * 2);
+  max-width: 1184px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 28px 0 0;
-  margin: auto;
+  padding: 28px 0 74px 0;
+  margin: 0 48px;
 }
 
-@media screen and (max-width: 1023px) and (min-width: 768px) {
+@media screen and (max-width: 1024px) {
   .header {
-    width: calc(100% - 24px * 2);
+    padding-bottom: 48px;
+    margin: 0 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .header {
-    width: calc(100% - 16px * 2);
     padding-top: 16px;
+    padding-bottom: 48px;
+    margin: 0 16px;
   }
 }
