--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
   position: relative;
   max-width: 1280px;
   width: 100%;
-  margin: auto;
+  margin: 0 auto;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 
