--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,29 +1,21 @@
 .place {
   max-width: 984px;
-  width: 100%;
-  margin: 92px auto;
+  margin: 0 auto;
+  padding: 92px 48px 0 48px;
   }
-
-  @media screen and (max-width: 1279px) {
-    .place {
-      margin: 92px auto;
-    }
-}
 
   @media screen and (max-width: 1023px) {
     .place {
-      width: calc(100% - 24px * 2);
-      margin: 88px auto 90px;
+      padding: 88px 24px 0 24px;
     }
   }
 
   @media screen and (max-width: 767px) {
     .place {
-      margin: 64px 0 66px;
+      padding: 64px 0 0;
       width: calc(100% - 16px * 2);
       width: 100%;
     }
   }
-
 
 
