--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,21 +3,28 @@
   justify-content: space-between;
   width: calc(100% - 48px * 2);
   margin: auto;
-  padding: calc(92px / 2) 0 24px;
+  padding: 92px 0 24px;
+}
+
+@media screen and (max-width: 1025px) {
+  .footer {
+    width: calc(100% - 24px * 2);
+    padding-top: 92px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
   .footer {
-    width: calc(100% - 24px * 2);
-    padding: calc(88px / 2) 0 24px;
+    padding-top: 88px;
+    margin: 0 24px 0 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .footer {
-    width: calc(100% - 16px * 2);
     flex-direction: column;
-    padding: calc(64px / 2) 0 24px;
+    width: calc(100% - 16px * 2);
     row-gap: 48px;
+    padding-top: 64px;
   }
 }
