--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,11 +10,18 @@
 @media screen and (max-width: 1024px) {
   .header {
     padding-bottom: 48px;
+    margin: 0 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding-bottom: 48px;
     margin: 0 24px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 500px) {
   .header {
     padding-top: 16px;
     padding-bottom: 48px;
