--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,25 +6,18 @@
   padding: 92px 0 24px;
 }
 
-@media screen and (max-width: 1025px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
   .footer {
     width: calc(100% - 24px * 2);
-    padding-top: 92px;
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  .footer {
-    padding-top: 88px;
-    margin: 0 24px 0 24px;
+    padding: 88px 0 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .footer {
-    flex-direction: column;
     width: calc(100% - 16px * 2);
+    flex-direction: column;
+    padding: 64px 0 24px;
     row-gap: 48px;
-    padding-top: 64px;
   }
 }
