--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,15 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 28px 0 74px 0;
+  padding: 28px 0 56px;
   margin: 0 48px;
-}
-
-@media screen and (max-width: 1024px) {
-  .header {
-    padding-bottom: 48px;
-    margin: 0 48px;
-  }
 }
 
 @media screen and (max-width: 768px) {
@@ -21,10 +14,9 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 450px) {
   .header {
     padding-top: 16px;
-    padding-bottom: 48px;
     margin: 0 16px;
   }
 }
